[gd_scene load_steps=7 format=3 uid="uid://dsyq8e0ohiyf8"]

[ext_resource type="Script" path="res://scripts/victory_sign.gd" id="1_enr2j"]
[ext_resource type="Texture2D" uid="uid://b18s8fhlhlm0n" path="res://images/Continue sign (no ground).png" id="1_rwhum"]
[ext_resource type="Texture2D" uid="uid://sn1yki0teulf" path="res://images/Continue sign-sunset.png" id="2_ush58"]
[ext_resource type="Texture2D" uid="uid://bauv588o4hl0f" path="res://images/Continue sign.png" id="3_bssqj"]
[ext_resource type="AudioStream" uid="uid://b6xxo1uf8a6od" path="res://audio/Gameplay_Music.wav" id="5_32v4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yv2j2"]

[node name="VictorySign" type="Area2D"]
z_index = -1
collision_mask = 255
script = ExtResource("1_enr2j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_yv2j2")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
visible = false
position = Vector2(0, 2)
scale = Vector2(0.067, 0.067)
texture = ExtResource("1_rwhum")
hframes = 4

[node name="Sprite2DSunset" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, 2)
scale = Vector2(0.067, 0.067)
texture = ExtResource("2_ush58")
hframes = 4

[node name="Sprite2DAfternoon" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, 2)
scale = Vector2(0.067, 0.067)
texture = ExtResource("3_bssqj")
hframes = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sign_On" type="AkEvent2D" parent="."]
event = {
"id": 1295442366,
"name": "Sign_On"
}

[node name="Sign_Off" type="AkEvent2D" parent="."]
event = {
"id": 1130713572,
"name": "Sign_Off"
}

[node name="Whip_Transition" type="AkEvent2D" parent="."]
event = {
"id": 3944649217,
"name": "Whip_Tansition"
}

[node name="Level_Finish" type="AkEvent2D" parent="."]
event = {
"id": 4278251541,
"name": "Level_Finish"
}

[node name="Level_Finish2" type="AkEvent2D" parent="."]
event = {
"id": 1428057472,
"name": "End_Music"
}

[node name="Level_Music" type="AkEvent2D" parent="."]
event = {
"id": 2322231365,
"name": "Gameplay_Music"
}

[node name="WhipTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_32v4d")
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="end_of_event" from="Level_Music" to="." method="_on_level_music_end_of_event"]
[connection signal="timeout" from="WhipTimer" to="." method="_on_whip_timer_timeout"]
